Add sprite module and functions Add gull sprite config

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="interface__super-nantendo" id="ui--super-nantendo">
       <div class="game-screen" id="game-screen" data-ui="true">
         <canvas
-          id="game-screen__canvas"
+          id="game-screen-canvas"
           class="pixelated"
           width="475"
           height="270"
